tests/syntax_tests/parsing/errors/structure/expected/gh16B.res.txt

  Syntax error!
  syntax_tests/parsing/errors/structure/gh16B.res:19:2

  17 │ 
  18 │ 
  19 │ })))))))))))))))))))))))))))))); // this ")" here, this can even be "))
     │ ))))))))))))))" and should error
  20 │ 
  21 │ Js.log("test") // should not be omitted

  I'm not sure what to parse here when looking at ")".

open Ws
let wss = Server.make { port = 82 }
let address = wss |.u Server.address
let log =
  ((Function$
      (fun msg ->
         Js.log
           (((((({js|> Server: |js})[@res.template ]) ^ msg)[@res.template ])
               ^ (({js||js})[@res.template ]))[@res.template ])))
  [@res.arity 1])
;;log
    (((((((((((((({js|Running on: |js})[@res.template ]) ^ address.address)
                [@res.template ]) ^ (({js|:|js})[@res.template ]))
              [@res.template ]) ^ (address.port |.u string_of_int))
            [@res.template ]) ^ (({js| (|js})[@res.template ]))
          [@res.template ]) ^ address.family)
        [@res.template ]) ^ (({js|)|js})[@res.template ]))[@res.template ])
module ClientSet =
  struct
    module T =
      (Belt.Id.MakeComparable)(struct
                                 type nonrec t = Client.t
                                 let cmp =
                                   ((Function$
                                       (fun a ->
                                          fun b ->
                                            ((compare
                                                (a |.u Client.getUniqueId)
                                                (b |.u Client.getUniqueId))
                                            [@res.braces ])))
                                   [@res.arity 2])
                               end)
    let empty = Belt.Set.make ~id:(((module T))[@res.namedArgLoc ])
  end
;;Js.log {js|test|js}